--- a/test/index.html
+++ b/test/index.html
@@ -2,10 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <style type="text/css">
-      body { background-color: #004; color: #ccc; font-family: Arial, Helvetica, sans-serif; }
-      .section { color: #fff; margin-top: 1.5rem; }
-    </style>
+    <link rel="stylesheet" href="browser.css">
   </head>
   <body>
     <script src="browserified-test.js"></script>
